fixed banner overlapping with z-index

--- a/style.css
+++ b/style.css
@@ -565,7 +565,7 @@ form input, form textarea {
     position: fixed;
     top: 1.3rem;
     right: 1rem;
-    z-index: 1;
+    z-index: 2;
   }
   
   .hamburger-button:hover {
@@ -580,6 +580,7 @@ form input, form textarea {
     left: 0;
     background-color: #2F2C2C;
     position: fixed;
+    z-index: 1;
   }
   
   .mob-menubar a {
